# ga-decipher

./: 3  README.md  Untitled.ipynb  beam_search.py  bigram_model.py  genetic_algorithm.py  main.py  ngram_model.py  processing.py  scoring.py  setup.cfg  setup.py
data/: barthel.txt  blixen.txt  campbell.txt  hiragana.txt  japanese.txt  japanese_mapping.txt  kanji.txt  rapanui.txt  rongorongo_cut.txt  rongorongo_independent.txt
ga_decipher/: scoring.py  utils.py
ga_decipher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ga_decipher/solvers/: beam_search.py  genetic_algorithm.py  solver.py
japanese_results/: best_key.txt
kanji_results/: best_key.txt
rongo_cut_results/: best_key.txt
rongo_results/: best_key.txt
