[metadata]
name = GADecipher
version = 0.1.0
author = Jonas Gregorio
description = A package for deciphering scripts using genetic algorithms and beam search.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
